--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
   },
   "devDependencies": {
     "@iconify/icons-bx": "^1.0.3",
+    "@iconify/icons-carbon": "^1.0.4",
+    "@iconify/icons-cib": "^1.0.3",
+    "@iconify/icons-ei": "^1.0.5",
+    "@iconify/icons-la": "^1.0.0",
+    "@iconify/icons-vaadin": "^1.0.5",
     "@iconify/react": "^1.1.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
