--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@iconify/icons-carbon": "^1.0.4",
     "@iconify/icons-cib": "^1.0.3",
     "@iconify/icons-ei": "^1.0.5",
+    "@iconify/icons-jam": "^1.0.5",
     "@iconify/icons-la": "^1.0.0",
+    "@iconify/icons-maki": "^1.0.7",
     "@iconify/icons-vaadin": "^1.0.5",
     "@iconify/react": "^1.1.3",
     "eslint": "^6.8.0",
