--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "@iconify/icons-maki": "^1.0.7",
     "@iconify/icons-vaadin": "^1.0.5",
     "@iconify/react": "^1.1.3",
-    "eslint": "^6.8.0",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
