--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
         ]
       }
     ],
+    "react/state-in-constructor": 0,
     "import/no-unresolved": "off",
     "no-shadow": "off",
     "arrow-parens": [
