--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movieapp",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "https://bren2102-moviedateapi.herokuapp.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
